--- a/index.html
+++ b/index.html
@@ -1,13 +1,95 @@
-<html>
-    <head>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="index.css">
-    </head>
-    <body>
-        <div id="clicker">Start</div>
-        <h1 id="result"></h1>
-        <script src="index.js"></script>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Aim Trainer</title>
+    
+    <style>
+        /* Reset default margin and padding, and include border-box sizing */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        /* Basic styling for body */
+        body {
+            transition: 0.1s;
+            font-family: Arial, sans-serif;
+            background-color: #1a1a1a;
+            color: white;
+        }
+
+        /* Header styling */
+        header {
+            background-color: #333;
+            text-align: center;
+            padding: 1rem 0;
+        }
+
+        /* Navigation styling */
+        nav {
+            text-align: center;
+            margin: 1rem 0;
+        }
+        nav a {
+            text-decoration: none;
+            color: white;
+            margin: 0 1rem;
+            font-size: 1.2rem;
+            transition: color 0.3s;
+        }
+        nav a:hover {
+            color: #007bff;
+        }
+
+        /* Main content styling */
+        main {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            min-height: calc(100vh - 200px); /* Use min-height for responsiveness */
+        }
+        .start-button {
+            padding: 1rem 2rem;
+            font-size: 1.2rem;
+            border: none;
+            border-radius: 2rem;
+            background-color: #007bff;
+            color: white;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+        .start-button:hover {
+            background-color: #0056b3;
+        }
+        .icon-link {
+            margin-top: 2rem;
+        }
+        .img {
+            margin: 0; /* Remove margin if not needed */
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Aim Trainer</h1>
+    </header>
+    <nav>
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
+    </nav>
+    <main>
+        <button class="start-button" onclick="replace()">Start Aim Trainer</button>
+        <a href="https://speedydelay.github.io/discord" title="discord logo"><img class="icon-link" src="https://www.freepnglogos.com/uploads/discord-logo-png/discord-logo-logodownload-download-logotipos-1.png" width="200" alt="discord logo png" /></a>   
+    </main>
+    <script>
+        function replace() {
+            window.location.replace("index2.html");
+        }
+    </script>
+</body>
 </html>
