--- a/index.html
+++ b/index.html
@@ -83,13 +83,18 @@
         <a href="#">Contact</a>
     </nav>
     <main>
-        <button class="start-button" onclick="replace()">Start Aim Trainer</button>
-        <a href="https://speedydelay.github.io/discord" title="discord logo"><img class="icon-link" src="https://www.freepnglogos.com/uploads/discord-logo-png/discord-logo-logodownload-download-logotipos-1.png" width="200" alt="discord logo png" /></a>   
+        <button class="start-button" onclick="replace()">Start Aim Trainer1</button>
+        <button style="margin-top: 0.5rem;" class="start-button" onclick="replace2()">Start Aim Trainer2(hard)</button>
+        <a href="https://discord.gg/ySPSTRDKTn" title="discord logo"><img class="icon-link" src="https://www.freepnglogos.com/uploads/discord-logo-png/discord-logo-logodownload-download-logotipos-1.png" width="200" alt="discord logo png" /></a>   
     </main>
     <script>
         function replace() {
             window.location.replace("index2.html");
+        }function replace2() {
+            window.location.replace("index3.html");
         }
     </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4119332856539660"
+    crossorigin="anonymous"></script>
 </body>
 </html>
