--- a/index2.html
+++ b/index2.html
@@ -12,5 +12,8 @@
         <div style="display: none;" class="restart" id="restart">restart</div>
         <div style="display: none;" class="mainpage" id="mainpage">mainpage</div>
         <script src="index.js"></script>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4119332856539660"
+     crossorigin="anonymous"></script><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4119332856539660"
+     crossorigin="anonymous"></script>
     </body>
 </html>
