--- a/index2.html
+++ b/index2.html
@@ -1,5 +1,7 @@
 <html>
     <head>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4119332856539660"
+     crossorigin="anonymous"></script>
         <title>Aim Trainer</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,7 +15,6 @@
         <div style="display: none;" class="mainpage" id="mainpage">mainpage</div>
         <script src="index.js"></script>
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4119332856539660"
-     crossorigin="anonymous"></script><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4119332856539660"
      crossorigin="anonymous"></script>
     </body>
 </html>
